argo/apps/bookstack/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:11
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mariadb-data
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-pvc
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - name: bookstack
        image: ghcr.io/linuxserver/bookstack:latest
        ports:
          - containerPort: 80
        volumeMounts:
          - name: bookstack-data
            mountPath: /config
      volumes:
        - name: bookstack-data
          persistentVolumeClaim:
            claimName: bookstack-pvc
