argo/apps/bookstack/Maria-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: bookstack
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
