argo/apps/bookstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-service
  namespace: bookstack
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app: bookstack
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: bookstack
