argo/apps/bookstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress
  namespace: bookstack
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.router.middlewares: bookstack-bookstack-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - bookstack.lan
      secretName: wildcard-lan-tls
  rules:
    - host: bookstack.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack-service
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bookstack-bookstack-redirect-https
  namespace: bookstack
spec:
  redirectScheme:
    scheme: https
    permanent: true
